add about section with responsive

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -3,3 +3,9 @@
     border: 3px solid $white;
     background: none;
 }
+
+.button{
+    @include buttons;
+    background: $right-gradiant;
+    padding: 1.5rem 2rem;
+}
