--- a/src/scss/layouts/_hero.scss
+++ b/src/scss/layouts/_hero.scss
@@ -1,7 +1,7 @@
 .hero{
     padding: 2rem 1rem;
-    width: 100vw;
-    background: $blue-gradiant;
+    width: 100%;
+    background: $right-gradiant;
 }
 
 .container{
