--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,10 +6,12 @@
 @import "./base/base";
 
 // COMPENENT
-@import "./components/hero";
 @import "./components/buttons";
+@import "./components/section-title";
 
 // LAYOUTS
-@import "./layouts/navbar"
+@import "./layouts/navbar";
+@import "./layouts/hero";
+@import "./layouts/about"
 
 // PAGES
