--- a/src/scss/utils/_mixins.scss
+++ b/src/scss/utils/_mixins.scss
@@ -10,3 +10,19 @@
     cursor: pointer;
     position: relative;
 }
+
+@mixin section-title{
+    color: $white;
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: bold;
+    padding: 1rem 10rem;
+    position: absolute;
+    @media screen and (max-width: 768px){
+        font-size: 1rem;
+        padding: 1rem 5rem;
+    }
+    @media screen and (max-width: 425px){
+        padding: 1rem 2rem;
+    }
+}
