--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,10 +8,12 @@
 // COMPENENT
 @import "./components/buttons";
 @import "./components/section-title";
+@import "./components/podium-card";
 
 // LAYOUTS
 @import "./layouts/navbar";
 @import "./layouts/hero";
-@import "./layouts/about"
+@import "./layouts/about";
+@import "./layouts/podium"
 
 // PAGES
