add calendar without responsive

--- a/src/scss/layouts/_about.scss
+++ b/src/scss/layouts/_about.scss
@@ -30,7 +30,7 @@
     }
     &__text{
         padding: 0rem 6rem;
-        font-size: 2rem;
+        font-size: 1.8vw;
         & p{
             color: $black;
             margin-bottom: 2rem;
