--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@
 @import "./components/buttons";
 @import "./components/section-title";
 @import "./components/podium-card";
+@import "./components/calendar";
 
 // LAYOUTS
 @import "./layouts/navbar";
