--- a/src/scss/components/_podium-card.scss
+++ b/src/scss/components/_podium-card.scss
@@ -36,7 +36,7 @@
         box-shadow: inset 0px 0px 25px 0px $black;
         display: flex;
         justify-content: center;
-        font-size: 3rem;
+        font-size: 3vw;
         align-items: center;
         position: absolute;
         right: 30%;
@@ -48,7 +48,7 @@
         bottom: 1rem;
         text-align: center;
         width: 100%;
-        font-size: 2rem;
+        font-size: 2vw;
         font-weight: bold;
     }
 }
