--- a/src/scss/layouts/_podium.scss
+++ b/src/scss/layouts/_podium.scss
@@ -2,7 +2,7 @@
     padding: 10rem 5rem;
     &__link{
         color: $light-blue;
-        font-size: 1.5rem;
+        font-size: 1.5vw;
         font-weight: bold;
         position: absolute;
         margin-top: 3rem;
