--- a/src/scss/utils/_mixins.scss
+++ b/src/scss/utils/_mixins.scss
@@ -1,7 +1,7 @@
 @mixin buttons{
     color: $white;
     text-transform: uppercase;
-    font-size: 1.3rem;
+    font-size: 1.3vw;
     font-weight: bold;
     outline: none;
     border: none;
@@ -14,7 +14,7 @@
 @mixin section-title{
     color: $white;
     text-transform: uppercase;
-    font-size: 2rem;
+    font-size: 2vw;
     font-weight: bold;
     padding: 1rem 10rem;
     position: absolute;
