add footer without responsive

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,7 @@
 @import "./layouts/navbar";
 @import "./layouts/hero";
 @import "./layouts/about";
-@import "./layouts/podium"
+@import "./layouts/podium";
+@import "./layouts/footer"
 
 // PAGES
