--- a/src/scss/layouts/_about.scss
+++ b/src/scss/layouts/_about.scss
@@ -9,7 +9,6 @@
     &__illustration, &__text{
         position: relative;
         width: 50%;
-        height: 500px;
         @media screen and (max-width: 1024px){
             width: 100%;
         } 
@@ -18,6 +17,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        height: 500px;
         &--image{
             width: 651px;
             height: 683px;
@@ -25,20 +25,25 @@
             filter: drop-shadow(30px 20px 90px $light-blue);
             @media screen and (max-width: 767px){
                 display: none;
+                height: 50px;
             }
         }
     }
     &__text{
         padding: 0rem 6rem;
-        font-size: 1.8vw;
+        font-size: max(1.5vw, min(1.4rem));
         & p{
             color: $black;
             margin-bottom: 2rem;
         }
+        & button{
+            font-size: 1rem;
+            padding: 1rem 2rem;
+        }
         @media screen and (max-width: 767px){
             position: absolute;
             top: 7rem;
-            font-size: 1.5rem;
+            //font-size: 1.5rem;
             padding: 0rem 1rem;
         }
     }
