--- a/src/scss/layouts/_navbar.scss
+++ b/src/scss/layouts/_navbar.scss
@@ -5,7 +5,8 @@
         & li a{
             color: $white;
             font-weight: bold;
-            font-size: 1.5rem;
+            //font-size: 1.5rem;
+            font-size: max(1.5vw, min(1.2rem));
             position: relative;
             &::before{
                 content : "";
@@ -26,7 +27,7 @@
                 font-size: 1.2rem;
             }
             @media screen and (max-width: 425px) {
-                font-size: 0.5rem;
+                font-size: 0.6rem;
                 &::before{
                     top: 20px;
                     border-bottom: 2px solid $white;
