add hero wave & background of the page

--- a/src/scss/components/_calendar.scss
+++ b/src/scss/components/_calendar.scss
@@ -25,6 +25,7 @@
 			justify-content: center;
 			font-size: max(2vw, min(1rem));
 			font-weight: bold;
+			background-color: $white;
 			& p{
 				color: $light-blue;
 			}
