--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -1,8 +1,9 @@
-$light-blue: #0445fc;
+$light-blue: #0446fc;
 $dark-blue: #05133D;
 
 $white: white;
 $black: #141414;
 
 $right-gradiant: linear-gradient(60deg, $light-blue, $dark-blue);
+$test-gradiant: linear-gradient(0deg, $light-blue, $dark-blue);
 $left-gradiant: linear-gradient(60deg, $dark-blue, $light-blue);
