--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -13,6 +13,7 @@ body, html {
     color: $white;
     scroll-behavior: smooth;
     font-family: 'Roboto', sans-serif;
+    background-image: url("../../assets/bg.svg");
 }
 
 a{
