--- a/src/scss/layouts/_hero.scss
+++ b/src/scss/layouts/_hero.scss
@@ -1,7 +1,20 @@
 .hero{
     padding: 2rem 1rem;
     width: 100%;
-    background: $right-gradiant;
+    background: $test-gradiant;
+    position: relative;
+    margin-bottom: -15rem;
+    @media screen and (max-width: 1440px){
+        margin-bottom: -6rem;
+    } 
+    @media screen and (max-width: 768px){
+        margin-bottom: 0rem;
+    } 
+}
+
+.wave{
+    width: 100%;
+
 }
 
 .container{
@@ -81,4 +94,13 @@
             z-index: 10;
         }
     }
+/*     &__wave{
+        position: absolute;
+        width: 100%;
+        height: 20%;
+        right: 0;
+        left: 0;
+        top: 27vw;
+
+    } */
 }
