--- a/src/scss/layouts/_hero.scss
+++ b/src/scss/layouts/_hero.scss
@@ -1,7 +1,7 @@
 .hero{
     padding: 2rem 1rem;
     width: 100%;
-    background: $test-gradiant;
+    background: $top-gradiant;
     position: relative;
     margin-bottom: -15rem;
     @media screen and (max-width: 1440px){
