--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -4,6 +4,6 @@ $dark-blue: #05133D;
 $white: white;
 $black: #141414;
 
+$top-gradiant: linear-gradient(0deg, $light-blue, $dark-blue);
 $right-gradiant: linear-gradient(60deg, $light-blue, $dark-blue);
-$test-gradiant: linear-gradient(0deg, $light-blue, $dark-blue);
 $left-gradiant: linear-gradient(60deg, $dark-blue, $light-blue);
