--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -5,5 +5,6 @@ $white: white;
 $black: #141414;
 
 $top-gradiant: linear-gradient(0deg, $light-blue, $dark-blue);
+$bottom-gradiant: linear-gradient(0deg, $dark-blue, $light-blue);
 $right-gradiant: linear-gradient(60deg, $light-blue, $dark-blue);
 $left-gradiant: linear-gradient(60deg, $dark-blue, $light-blue);
