add login page with responsive

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,6 +17,7 @@
 @import "./layouts/hero";
 @import "./layouts/about";
 @import "./layouts/podium";
-@import "./layouts/footer"
+@import "./layouts/footer";
 
 // PAGES
+@import "./pages/login"
