--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,7 @@
 @import "./components/section-title";
 @import "./components/podium-card";
 @import "./components/calendar";
+@import "./components/article";
 
 // LAYOUTS
 @import "./layouts/navbar";
@@ -20,4 +21,5 @@
 @import "./layouts/footer";
 
 // PAGES
-@import "./pages/login"
+@import "./pages/login";
+@import "./pages/blog"
