create new navbar for blog, article dashboard page

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,6 +20,7 @@
 @import "./layouts/about";
 @import "./layouts/podium";
 @import "./layouts/footer";
+@import "./layouts/simple-navbar";
 
 // PAGES
 @import "./pages/login";
