--- a/src/scss/pages/_blog.scss
+++ b/src/scss/pages/_blog.scss
@@ -10,7 +10,7 @@
     @media screen and (max-width: 768px){
         padding: 5rem 1rem;
     }
-    &__link{
+/*     &__link{
         color: $light-blue;
         font-weight: bold;
         font-size: 1.5rem;
@@ -32,5 +32,5 @@
                 border-color: $light-blue;
             }
         }
-    }
+    } */
 }
