add dashboard page with responsive

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,4 +25,5 @@
 // PAGES
 @import "./pages/login";
 @import "./pages/blog";
-@import "./pages/article"
+@import "./pages/article";
+@import "./pages/dashboard"
