--- a/src/scss/pages/_login.scss
+++ b/src/scss/pages/_login.scss
@@ -49,7 +49,7 @@
             font-weight: bold;
             margin-bottom: 20px;
         }
-        & input{
+        & input, select, textarea{
             color: $white;
             background: none;
             font-size: 1.5rem;
@@ -58,6 +58,39 @@
             padding: 1rem 2rem;
             margin-bottom: 50px;
             outline: none;
+        }
+        & textarea{
+            height: 500px;
+        }
+    }
+}
+
+.form-container-dark{
+    margin: 5rem 5rem 0rem 5rem;
+    width: 70%;
+    &__input{
+        display: flex;
+        flex-direction: column;
+        & label{
+            font-size: 1rem;
+            text-transform: uppercase;
+            font-weight: bold;
+            margin-bottom: 20px;
+            color: $light-blue;
+        }
+        & input, select, textarea{
+            color: $light-blue;
+            background: none;
+            font-size: 1.5rem;
+            border-radius: 10px;
+            border: 5px solid $light-blue;
+            padding: 1rem 2rem;
+            margin-bottom: 50px;
+            outline: none;
+        }
+        & textarea{
+            height: 500px;
+            width: 100%;
         }
     }
 }
