--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -16,6 +16,9 @@
                 flex-direction: column;
                 gap: 1.5rem;
             }
+            & li{
+                color: red;
+            }
         }
     }
     &__copyright > p{
