fix calendar and add buttons signout

--- a/src/scss/layouts/_simple-navbar.scss
+++ b/src/scss/layouts/_simple-navbar.scss
@@ -2,3 +2,8 @@
     background: $right-gradiant;
     padding: 2rem;
 }
+.signout-button{
+    position: absolute;
+    right: 0;
+    top: 20px;
+}
